<resources>
    <string name="app_name">Tiendas</string>
    <string name="description_img_photo">Imagen de la tienda</string>
    <string name="description_store_add">Agregar tienda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Nombre de la tienda</string>
    <string name="helper_required">Requerido</string>
    <string name="hint_phone">Teléfono de la tienda</string>
    <string name="hint_web">Sitio web de la Tienda</string>
    <string name="hint_photo_url">Foto de la tienda</string>
    <string name="edit_store_title_add">Crear tienda</string>
    <string name="menu_save">Guardar tienda</string>
    <string name="edit_store_message_save_success">Tienda guardada correctamente</string>
</resources>